--- a/save_embeddings.ipynb
+++ b/save_embeddings.ipynb
@@ -113,12 +113,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "242f71dc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "encoder.load_state_dict(torch.load('weights/varying_margin/model_with_margin_0.2.pth', weights_only=True))\n",
+    "encoder.load_state_dict(torch.load('weights/model_weights_camera_10-27-25.pth', weights_only=True))\n",
     "encoder.eval();"
    ]
   },
@@ -131,7 +131,7 @@
    "source": [
     "persist_directory = \"embedding_data/\" \n",
     "client = chromadb.PersistentClient(path=persist_directory)\n",
-    "collection = client.get_or_create_collection(name=\"10-27-25_model_embeddings\")"
+    "collection = client.create_collection(name=\"10-27-25_model_embeddings\")"
    ]
   },
   {
@@ -217,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
