--- a/full_pca.ipynb
+++ b/full_pca.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "ec458b47",
    "metadata": {},
    "outputs": [],
@@ -18,9 +18,9 @@
     "import numpy as np\n",
     "\n",
     "#Import library code\n",
-    "import dataloading\n",
-    "import model_functions\n",
-    "import data_vis"
+    "import helper_code.dataloading as dataloading\n",
+    "import helper_code.model_functions as model_functions\n",
+    "import helper_code.data_vis as data_vis"
    ]
   },
   {
