--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ee18ce56",
    "metadata": {},
    "outputs": [
@@ -26,9 +26,9 @@
     "import torch.optim as optim\n",
     "\n",
     "#library functions\n",
-    "import dataloading\n",
-    "import data_vis\n",
-    "import model_functions"
+    "import helper_code.dataloading as dataloading\n",
+    "import helper_code.data_vis as data_vis\n",
+    "import helper_code.model_functions as model_functions"
    ]
   },
   {
