--- a/save_embeddings.ipynb
+++ b/save_embeddings.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "d3b0d87b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install model_functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "68fef8ce",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Aneesh\\anaconda3\\envs\\vision_models\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Importing packages\n",
     "from transformers import ViTModel, ViTImageProcessor\n",
@@ -25,34 +26,23 @@
     "import chromadb\n",
     "\n",
     "#Import library code\n",
-    "import dataloading\n",
-    "from model_functions import ViTEmbeddingNet"
+    "from helper_code import dataloading \n",
+    "from helper_code.model_functions import ViTEmbeddingNet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9d117a29",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<torch._C.Generator at 0x1caf6cee050>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "torch.manual_seed(1234)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8739273f",
    "metadata": {},
    "outputs": [],
@@ -65,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "dc9f1039",
    "metadata": {},
    "outputs": [],
@@ -80,19 +70,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "437b658e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of ViTModel were not initialized from the model checkpoint at google/vit-base-patch16-224 and are newly initialized: ['pooler.dense.bias', 'pooler.dense.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Importing the model and setting the device. Using a ViT model since transformer architecture is generally pretty powerful when it comes to extracting features from data.\n",
     "model_name = \"google/vit-base-patch16-224\"\n",
@@ -102,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "9ac03b8b",
    "metadata": {},
    "outputs": [],
@@ -118,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "encoder.load_state_dict(torch.load('weights/model_weights_camera_10-27-25.pth', weights_only=True))\n",
+    "encoder.load_state_dict(torch.load('weights/model_weights_camera_10-27-25.pth', weights_only=True, map_location=device))\n",
     "encoder.eval();"
    ]
   },
@@ -136,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "ceb0587e",
    "metadata": {},
    "outputs": [],
@@ -163,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "153fd9ba",
    "metadata": {},
    "outputs": [],
@@ -173,21 +154,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "198f0810",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1498, 768)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "received_embeddings['embeddings'].shape"
    ]
@@ -217,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
